--- a/Prediction.ipynb
+++ b/Prediction.ipynb
@@ -531,6 +531,7 @@
     "f = open('statistics.csv')\n",
     "dataFrame_in = pandas.read_csv(f)\n",
     "pandas.options.display.float_format = '{:,.0f}'.format\n",
+    "count = 5\n",
     "dataFrame_in"
    ]
   },
@@ -550,7 +551,9 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "a82d9634-41a5-4f31-a6eb-058161877306",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -1593,7 +1596,7 @@
    "outputs": [],
    "source": [
     "indexes = np.array(normalized_df.index.values).reshape(-1, 1)\n",
-    "to_predict_indexes= list(range(len(indexes), len(indexes)+5))\n",
+    "to_predict_indexes= list(range(len(indexes), len(indexes)+count))\n",
     "to_predict_indexes= np.array(to_predict_indexes).reshape(-1, 1)\n",
     "score = np.array(normalized_df['Score']).reshape(-1, 1)"
    ]
@@ -1692,7 +1695,7 @@
     }
    ],
    "source": [
-    "regsr = LogisticRegression()\n",
+    "regsr = make_pipeline(PolynomialFeatures(),LogisticRegression()) \n",
     "regsr.fit( np.array(normalized_df['Score']).reshape(-1, 1) ,  np.array(normalized_df['Winning']))\n",
     "predicted_winning = regsr.predict(predicted_score)\n",
     "predicted_winning"
@@ -1736,7 +1739,7 @@
     "    new_predicted_score.append(predicted_score[i][0])\n",
     "new_predicted_winning = []\n",
     "new_predicted_algo = []\n",
-    "for index in range(5):\n",
+    "for index in range(count):\n",
     "    if(list(predicted_winning)[index] == 0):\n",
     "        new_predicted_winning.append(False)\n",
     "    else:\n",
